test/tests/compiler/18_structures/invalid_types/extra_credit/bad_union_member_access/nested_non_member.plx
type struc s(    a: i32    )

type union u(    nested: struc s    )

pub fn main(none) i32 {
    my_union: union u = $($(1))
    #  need to specify member name 's' even though it's only member
    return my_union.a
}
